# JpgLossy
set(SOURCES
  JCAPIMIN.C
  JCAPISTD.C
  JCCOEFCT.C
  JCCOLOR.C
  JCDCTMGR.C
  JCHUFF.C
  JCINIT.C
  JCMAINCT.C
  JCMASTER.C
  JCMARKER.C
  JCOMAPI.C
  JCPARAM.C
  JCPHUFF.C
  JCPREPCT.C
  JCSAMPLE.C
  JDAPIMIN.C
  JDAPISTD.C
  JDATADST.C
  JDATASRC.C
  JDCOEFCT.C
  JDCOLOR.C
  JDDCTMGR.C
  JDHUFF.C
  JDINPUT.C
  JDMAINCT.C
  JDMARKER.C
  JDMASTER.C
  JDMERGE.C
  JDPHUFF.C
  JDPOSTCT.C
  JDSAMPLE.C
  JERROR.C
  JFDCTINT.C
  JFDCTFLT.C
  JFDCTFST.C
  JIDCTFLT.C
  JIDCTFST.C
  JIDCTINT.C
  JIDCTRED.C
  jmemmgr.c
  JMEMNOBS.C
  JQUANT1.C
  JQUANT2.C
  JUTILS.C
  RDCOLMAP.C
  )

add_library(JpgLossy ${SOURCES})
set_source_files_properties(${SOURCES} PROPERTIES LANGUAGE C)
set_target_properties(JpgLossy PROPERTIES LINKER_LANGUAGE C)
